<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewOrEditTodoItemFragment">

    <ImageView
        android:id="@+id/close_editinig_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_close_page"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageView>

    <Button
        android:id="@+id/save_editing_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"></Button>

    <EditText
        android:id="@+id/todo_text_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/todo_edittext_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save_editing_button"></EditText>

    <TextView
        android:id="@+id/importance_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_importance_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todo_text_edittext"></TextView>

    <Spinner
        android:id="@+id/importance_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/importance_textview"></Spinner>

    <TextView
        android:id="@+id/deadline_textview_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/todo_deadline_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/importance_spinner"></TextView>

    <Switch
        android:id="@+id/deadline_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/importance_spinner"></Switch>

    <TextView
        android:id="@+id/deadline_textview_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deadline_textview_header"
        ></TextView>

    <ImageView
        android:id="@+id/delete_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_delete_todoitem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deadline_textview_text"
        ></ImageView>

    <TextView
        android:id="@+id/delete_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_delete_button"
        app:layout_constraintStart_toEndOf="@+id/delete_imageview"
        app:layout_constraintTop_toBottomOf="@+id/deadline_textview_text"></TextView>

</androidx.constraintlayout.widget.ConstraintLayout>